# measure_CO2_system

./: .gitignore  README.md
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/androidTest/java/com/myproj/client/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/myproj/client/: ApiService.kt  CO2Sample.kt  ChartFragment.kt  DateAxisValueFormatter.kt  DateSharer.kt  MainActivity.kt  MainFragment.kt  SampleAdapter.kt  SensorDataAnalyzer.kt  SettingsFragment.kt
client/app/src/main/java/com/myproj/client/fragments/: ChartFragment.kt  MainFragment.kt  SettingsFragment.kt
client/app/src/main/java/com/myproj/client/network/: ApiClient.kt  ApiService.kt  DataRepository.kt  SensorDataCallback.kt  SensorDataViewModel.kt
client/app/src/main/res/drawable/: rectangle.xml
client/app/src/main/res/layout/: activity_main.xml  fragment_chart.xml  fragment_main.xml  fragment_settings.xml  sample_item.xml
client/app/src/main/res/menu/: bottom_nav_menu.xml
client/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/app/src/test/java/com/myproj/client/: ExampleUnitTest.kt
client/gradle/wrapper/: gradle-wrapper.properties
docs/: general_arch.puml
server/: CMakeLists.txt
server/src/: Application.cpp  Application.hpp  CMakeLists.txt  Data.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SpdlogConfig.hpp  Utils.hpp  main.cpp
server/src/Application/: Application.cpp  Application.hpp
server/src/CO2Sensor/: CO2Sensor.cpp  CO2Sensor.hpp
server/src/Data/: Data.hpp
server/src/Database/: SQLiteDatabase.cpp  SQLiteDatabase.hpp
server/src/Devices/: CO2Sensor.cpp  LED.cpp  LED.hpp
server/src/Network/: JsonSerialization.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
